<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="edu.study.radek.whoisthis.activitiesControllers.CreateTeamActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewGameType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/textOnPrimary" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/label_create_team"
            android:textColor="@color/textOnPrimary" />

        <EditText
            android:id="@+id/editTextTeamNameA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/label_create_team_hint"
            android:inputType="textPersonName"
            android:textColor="@color/textOnPrimary" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/label_create_team"
            android:textColor="@color/textOnPrimary" />

        <EditText
            android:id="@+id/editTextTeamNameB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/label_create_team_hint"
            android:inputType="textPersonName"
            android:textColor="@color/textOnPrimary" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButtonGestures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobtn_gesures"
                android:textColor="@color/textOnPrimary" />

            <RadioButton
                android:id="@+id/radioButtonVoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobtn_voice"
                android:textColor="@color/textOnPrimary" />
        </RadioGroup>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorsecondaryLight"
            android:onClick="play"
            android:text="@string/button_start"
            android:textColor="@color/textOnSecondary" />
    </LinearLayout>
</FrameLayout>
